app.css
* {
  box-sizing: border-box;
}

body {
  background: #0b192e;
  margin: 0;
  color: #8893af;
}

.mt {
  margin-top: 2em;
}
.mb {
  margin-bottom: 4em;
}

.fireworks {
  position: absolute;
  left: 0;
  top: 0;
}

.brand-icon {
  box-sizing: content-box;
  padding: 20px;
  font-size: 30px;
  width: 30px;
  border-radius: 50%;
  text-align: center;
  text-decoration: none;
  margin-right: 1em;
}

.hamburger {
  display: none;
}
.hamburger.is-active .hamburger-inner,
.hamburger.is-active .hamburger-inner::before,
.hamburger.is-active .hamburger-inner::after {
  background-color: #64ffda;
}
.hamburger-inner,
.hamburger-inner::before,
.hamburger-inner::after {
  background-color: #64ffda;
}

.navbar {
  background: #0b192e;
  position: fixed;
  width: 100%;
  overflow: hidden;
}
.nav-content {
  display: flex;
  padding: 0.5em 1em;
  align-items: center;
}
.nav-column {
  display: flex;
  align-items: center;
  z-index: 100;
}
.nav-list {
  list-style: none;
  display: flex;
  align-items: center;
  transition: opacity ease 0.5s;
}
.nav-li {
  display: flex;
  margin-left: 2em;
}
.nav-link {
  text-decoration: none;
  font-family: "Source Code Pro", monospace, sans-serif;
  color: #64ffda;
}
.nav-link:hover {
  color: #ccd7f5;
}
.resume-btn {
  display: inline-block;
  padding: 0.5em 1.5em;
  border: 0.1em solid #64ffda;
  background-color: #0b192e;
  border-radius: 0.25em;
  color: #ccd7f5;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 1em;
  font-family: "Source Code Pro", monospace, sans-serif;
  cursor: pointer;
}
.resume-btn:hover {
  background-color: rgba(100, 255, 219, 0.051);
  transition: 0.4s;
}
.nav-content .nav-column:first-child {
  flex-grow: 1;
}
.title {
  font-family: "Source Code Pro", monospace, sans-serif;
  font-size: 2.5em;
  color: #ccd7f5;
}
.logo-icon {
  font-size: 50px;
  padding-right: 0.5em;
  color: #ff1461;
}
.logo-icon:hover,
.logo-icon:focus {
  color: #fbf38c;
}

.main {
  padding: 9em 5em 2em 5em;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}
.second-header {
  font-family: "Source Code Pro", monospace, sans-serif;
  font-size: 18px;
  color: #8893af;
}
.layla-krauss {
  font-family: "Anybody", Verdana, sans-serif;
  font-size: 60px;
  color: #ccd7f5;
  margin: 0;
  padding: 0.2em;
}
.fade {
  color: #8893af;
}
.code {
  font-family: "Source Code Pro", monospace, sans-serif;
}
.about {
  width: 75%;
  padding-top: 9.5em;
  margin-top: -8em;
}

.main-end {
  margin-inline: 3em;
}
@media (prefers-reduced-motion: no-preference) {
  .line-break {
    animation: line-break 1.2s 1 ease-in-out;
  }
}
@keyframes line-break {
  0% {
    margin-inline: 31em;
  }
  100% {
    margin-inline: 3em;
  }
}

.project-header {
  font-size: 1.5em;
}
#projects {
  padding-top: 13.5em;
  margin-top: -13em;
}
.projects {
  display: flex;
  flex-wrap: wrap;
}
.project-img {
  width: 100%;
}
.project-tile {
  display: inline-block;
  width: 33%;
  max-width: 100%;
  padding: 2em;
}
.project-img:hover {
  opacity: 0.5;
}

#skills {
  padding-top: 6.5em;
  margin-top: -5em;
  font-size: 1.5em;
}
.skills {
  line-height: 2.5em;
}

.footer {
  display: flex;
  justify-content: center;
  width: 100%;
  padding: 2em 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}
.footer-content {
  width: 100%;
}
.connect {
  padding-right: 7em;
  max-width: 40em;
}
#contact {
  padding-top: 6.5em;
  margin-top: -5em;
}
.footer-title {
  font-size: 2em;
  font-family: "Source Code Pro", monospace, sans-serif;
}
.footer-img-wrapper {
  padding: 3em;
}
.footer-img {
  width: 300px;
  border-radius: 1em;
}
.form-group {
  margin-bottom: 1em;
}
.form-control {
  display: block;
  border: none;
  border-radius: 0.5em;
  padding: 0.5em 1em;
  width: 100%;
  margin: auto;
  font-family: inherit;
  font-size: 1em;
}
.second-footer {
  font-family: "Source Code Pro", monospace, sans-serif;
  margin: 5em 0em 1em 3em;
  color: #ccd7f5;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  font-size: 14px;
}
.footer-icons a {
  padding: 10px;
  font-size: 4em;
  border-radius: 100%;
  text-align: center;
  text-decoration: none;
  margin-right: 1em;
  background: #0b192e;
  color: #ccd7f5;
  width: auto;
}
.footer-icons .brand-icon:hover,
.footer-icons .brand-icon:focus {
  color: #ff1461;
}

@media (max-width: 1085px) {
  .nav-list {
    display: none;
    opacity: 0;
    flex-direction: column;
    width: 100%;
    position: fixed;
    height: 100%;
    left: 0;
    justify-content: center;
    top: 0;
    align-items: center;
    margin: 0;
    padding: 0;
    background-color: rgba(11, 25, 46, 0.9);
  }
  .nav-list.is-active {
    opacity: 1;
  }

  .nav-li {
    margin: 1.5em;
  }
  .hamburger {
    display: inline-block;
    z-index: 100;
  }

  .project-tile {
    width: 50%;
  }
}
@media (max-width: 600px) {
  .main {
    padding: 10em 3em 2em 3em;
  }

  .project-tile {
    width: 100%;
  }
}
@media (max-width: 480px) {
  .title {
    font-size: 1.5em;
  }
  .main {
    padding: 8em 3em 2em 3em;
  }
  .second-header {
    font-size: 1.5em;
  }
  .layla-krauss {
    font-size: 2em;
  }
  .about {
    font-size: 1.5em;
    width: 100%;
  }
  .project-tile {
    padding: 0;
    margin-bottom: 2em;
  }
  .footer {
    flex-direction: column;
  }
  .connect {
    padding: 3em;
    font-size: 1em;
  }
  .footer-img-wrapper {
    padding: 3em;
  }
  .footer-img {
    max-width: 100%;
  }
  .second-footer {
    font-size: 0.5em;
    flex-direction: column-reverse;
    margin: 0 0 2em 0;
    text-align: center;
  }
  .copyright {
    width: 100%;
  }
  .footer-icons {
    font-size: 1.5em;
    display: flex;
    justify-content: center;
    width: 100%;
  }
  .footer-icons a {
    margin-right: 0.2em;
  }
}

